syntax = "proto3";

option java_package = "com.soulfiremc.grpc.generated";
option java_multiple_files = true;

package soulfire.v1;

import "google/protobuf/timestamp.proto";

message LogString {
  string id = 1;
  string message = 2;
  optional string instance_id = 3;
  optional string bot_account_id = 4;
  optional string script_id = 5;
  bool personal = 6;
  optional string instance_name = 7;
  optional string bot_account_name = 8;
  google.protobuf.Timestamp timestamp = 9;
  optional string logger_name = 10;
  optional string level = 11;
}

message GlobalLogScope {
}

message InstanceLogScope {
  string instance_id = 1;
}

message BotLogScope {
  string instance_id = 1;
  string bot_id = 2;
}

message GlobalScriptLogScope {
  string script_id = 1;
}

message InstanceScriptLogScope {
  string instance_id = 1;
  string script_id = 2;
}

message PersonalLogScope {
}

message LogScope {
  oneof scope {
    GlobalLogScope global = 1;
    InstanceLogScope instance = 2;
    BotLogScope bot = 3;
    GlobalScriptLogScope global_script = 4;
    InstanceScriptLogScope instance_script = 5;
    PersonalLogScope personal = 6;
  }
}

message PreviousLogRequest {
  LogScope scope = 4;
  int32 count = 3;
}

message PreviousLogResponse {
  repeated LogString messages = 1;
}

message LogRequest {
  LogScope scope = 3;
}

message LogResponse {
  LogString message = 1;
}

service LogsService {
  rpc GetPrevious (PreviousLogRequest) returns (PreviousLogResponse) {}
  rpc Subscribe (LogRequest) returns (stream LogResponse) {}
}
