syntax = "proto3";

option java_package = "com.soulfiremc.grpc.generated";
option java_multiple_files = true;

package soulfire.v1;

import "soulfire/common.proto";
import "google/protobuf/timestamp.proto";

message UserCreateRequest {
  string username = 1;
  UserRole role = 2;
  string email = 3;
}

message UserCreateResponse {
  string id = 1;
}

message UserDeleteRequest {
  string id = 1;
}

message UserDeleteResponse {
}

message UserListRequest {
}

message UserListResponse {
  message User {
    string id = 1;
    string username = 2;
    UserRole role = 3;
    string email = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    optional google.protobuf.Timestamp last_login_at = 7;
    google.protobuf.Timestamp min_issued_at = 8;
  }

  repeated User users = 1;
}

message UserInfoRequest {
  string id = 1;
}

message UserInfoResponse {
  string username = 1;
  UserRole role = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  optional google.protobuf.Timestamp last_login_at = 6;
  google.protobuf.Timestamp min_issued_at = 7;
}

// Invalidate all sessions for a user, effectively logging them out of all devices.
message InvalidateSessionsRequest {
  string id = 1;
}

message InvalidateSessionsResponse {
}

message UpdateUserRequest {
  string id = 1;
  string username = 2;
  UserRole role = 3;
  string email = 4;
}

message UpdateUserResponse {
}

message GenerateUserAPITokenRequest {
  string id = 1;
}

message GenerateUserAPITokenResponse {
  string token = 1;
}

service UserService {
  rpc CreateUser (UserCreateRequest) returns (UserCreateResponse) {}
  rpc DeleteUser (UserDeleteRequest) returns (UserDeleteResponse) {}
  rpc ListUsers (UserListRequest) returns (UserListResponse) {}
  rpc GetUserInfo (UserInfoRequest) returns (UserInfoResponse) {}
  rpc InvalidateSessions (InvalidateSessionsRequest) returns (InvalidateSessionsResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc GenerateUserAPIToken (GenerateUserAPITokenRequest) returns (GenerateUserAPITokenResponse) {}
}
